--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "^0.61.4",
+    "react-native-chart-kit": "^6.9.0",
     "react-native-dropdown-picker": "^3.7.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.7.0",
@@ -25,7 +26,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-native-svg": "11.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
