--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.8.7",
     "@react-navigation/stack": "^5.12.4",
+    "base-64": "^1.0.0",
     "expo": "~37.0.2",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^7.14.4",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -23,11 +25,11 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "11.0.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "react-native-svg": "11.0.1"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
