--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-chart-kit": "^6.9.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
