--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
     "@react-navigation/stack": "^5.12.4",
     "base-64": "^1.0.0",
     "expo": "~37.0.2",
-    "expo-firestore-offline-persistence": "^0.1.0",
-    "expo-sqlite": "~8.1.0",
     "expo-status-bar": "~1.0.2",
-    "firebase": "^7.14.4",
-    "indexeddbshim": "^7.0.0",
+    "firebase": "7.9.0",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -37,7 +34,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-font": "~8.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
