--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/netinfo": "^6.0.0",
     "@react-navigation/native": "^5.8.7",
     "@react-navigation/stack": "^5.12.4",
     "base-64": "^1.0.0",
     "expo": "~37.0.2",
+    "expo-font": "~8.1.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
     "moment": "^2.29.1",
@@ -34,8 +36,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-font": "~8.1.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
