--- a/package.json
+++ b/package.json
@@ -8,35 +8,35 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-community/masked-view": "0.1.6",
-    "@react-native-community/netinfo": "^6.0.0",
+    "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.7",
     "@react-navigation/native": "^5.8.7",
     "@react-navigation/stack": "^5.12.4",
     "base-64": "^1.0.0",
-    "expo": "~37.0.2",
-    "expo-font": "~8.1.0",
-    "expo-status-bar": "~1.0.2",
+    "expo": "^40.0.0",
+    "expo-font": "~8.4.0",
+    "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "^0.61.4",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-chart-kit": "^6.9.0",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-progress": "^4.1.2",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-svg": "11.0.1",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-svg": "12.1.0",
     "react-native-text-avatar": "^1.0.7",
-    "react-native-toggle-password-visibility": "^1.0.5",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "@expo/vector-icons": "^12.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
