--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "@expo/vector-icons": "^12.0.0"
+    "@expo/vector-icons": "^12.0.0",
+    "expo-ads-admob": "~8.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
