--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.7",
@@ -15,6 +16,8 @@
     "@react-navigation/stack": "^5.12.4",
     "base-64": "^1.0.0",
     "expo": "^40.0.0",
+    "expo-ads-admob": "~8.4.0",
+    "expo-constants": "~9.3.3",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
@@ -35,10 +38,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "@expo/vector-icons": "^12.0.0",
-    "expo-ads-admob": "~8.4.0",
-    "expo-constants": "~9.3.3"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
