--- a/app.json
+++ b/app.json
@@ -18,13 +18,13 @@
 
       ]
     },
-    "version": "1.2.4",
+    "version": "1.2.6",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#17212b",
+      "resizeMode": "contain"
     },
 
     "assetBundlePatterns": [
