--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "expo-ads-admob": "~8.4.0",
     "expo-constants": "~9.3.3",
     "expo-font": "~8.4.0",
+    "expo-localization": "~9.1.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
+    "i18n-js": "^3.8.0",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
